# QT_Chat

./: Message.h  Test.cpp  mainwindow.cpp  mainwindow.h  registrationform.ui  startscreen.cpp  startscreen.h
Client/: CMakeLists.txt  Database.cpp  Database.h  Message.cpp  loginform.cpp  loginform.h  loginform.ui  mainwindow.ui  registrationform.cpp  registrationform.h  startscreen.ui
Server/: CMakeLists.txt  bannwindow.cpp  bannwindow.h  bannwindow.ui  database.cpp  database.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  network.cpp  network.h  showmessageswindow.cpp  showmessageswindow.h  showmessageswindow.ui
